third_party/WebKit/Source/core/workers/SharedWorkerGlobalScope.cpp
@@ -93,10 +93,6 @@ const AtomicString& SharedWorkerGlobalScope::interfaceName() const {
   return EventTargetNames::SharedWorkerGlobalScope;
 }
 
-SharedWorkerThread* SharedWorkerGlobalScope::thread() {
-  return static_cast<SharedWorkerThread*>(Base::thread());
-}
-
 void SharedWorkerGlobalScope::exceptionThrown(ErrorEvent* event) {
   WorkerGlobalScope::exceptionThrown(event);
   if (WorkerThreadDebugger* debugger =
