third_party/WebKit/Source/core/workers/WorkerGlobalScope.h
@@ -82,7 +82,12 @@ class CORE_EXPORT WorkerGlobalScope : public EventTargetWithInlineData,
   }
 
   KURL completeURL(const String&) const;
+
+  // WorkerOrWorkletGlobalScope
+  bool isClosing() const final { return m_closing; }
   virtual void dispose();
+  WorkerThread* thread() const final { return m_thread; }
+
   void exceptionUnhandled(int exceptionId);
 
   void registerEventListener(V8AbstractEventListener*);
@@ -140,9 +145,6 @@ class CORE_EXPORT WorkerGlobalScope : public EventTargetWithInlineData,
     return const_cast<WorkerGlobalScope*>(this);
   }
 
-  bool isClosing() const final { return m_closing; }
-
-  WorkerThread* thread() const { return m_thread; }
   double timeOrigin() const { return m_timeOrigin; }
   WorkerSettings* workerSettings() const { return m_workerSettings.get(); }
 
