third_party/WebKit/Source/modules/compositorworker/CompositorWorkerGlobalScope.h
@@ -15,6 +15,7 @@
 namespace blink {
 
 class CompositorWorkerThread;
+class InProcessWorkerObjectProxy;
 class WorkerThreadStartupData;
 
 class MODULES_EXPORT CompositorWorkerGlobalScope final
@@ -56,7 +57,8 @@ class MODULES_EXPORT CompositorWorkerGlobalScope final
                               double timeOrigin,
                               std::unique_ptr<SecurityOrigin::PrivilegeData>,
                               WorkerClients*);
-  CompositorWorkerThread* thread() const;
+
+  InProcessWorkerObjectProxy& workerObjectProxy() const;
 
   bool m_executingAnimationFrameCallbacks;
   FrameRequestCallbackCollection m_callbackCollection;
